--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
-name: MagicMonstersPlugin
-main: src.main.MagicMonsters
+name: MagicMonsters
+main: main.MagicMonsters
 version: 1.0
 api-version: 1.17
 commands:
@@ -19,3 +19,5 @@ commands:
         description: In 2 seconds, shoot 9-21 arrows at 3 arrows/sec at cursor. Arrows are not retrievable. Cooldown of 5mins
     meteorstorm:
         description: In 6 seconds, fire 8-16 fire charges at cursor at a rate of 2 charges/sec Cooldown of 10mins
+    magictest:
+        description: Dont use this
